--- a/main/html/content-areas/CA5 - Business Context/subtopic/5.2-digital-value-to-organisations/5.2-digital-value-to-organisations.html
+++ b/main/html/content-areas/CA5 - Business Context/subtopic/5.2-digital-value-to-organisations/5.2-digital-value-to-organisations.html
@@ -271,6 +271,308 @@
         <p>Systems should be simple to install with minimal effort.</p>
         <p><strong>Example:</strong> Mobile apps install in one click; larger software includes setup packages with documentation.</p>
     </ul>
+
+      <script>
+        const quizData = [
+        {
+            question: "Which digital tools help organisations perform better market research?",
+            options: [
+            "E-commerce websites and loyalty programs",
+            "Online surveys, customer feedback systems, and analytics",
+            "Automated payroll and scheduling",
+            "Intranet portals and document sharing"
+            ],
+            answer: "Online surveys, customer feedback systems, and analytics",
+            explanation: "These tools let organisations understand customer needs and identify trends."
+        },
+        {
+            question: "How does social media support brand promotion?",
+            options: [
+            "By automating payroll",
+            "By providing 24/7 global sales",
+            "By allowing engagement with wider audiences cost-effectively",
+            "By storing employee training records"
+            ],
+            answer: "By allowing engagement with wider audiences cost-effectively",
+            explanation: "Platforms like TikTok and LinkedIn help businesses promote products and engage audiences."
+        },
+        {
+            question: "Which feature of digital sales platforms helps improve customer satisfaction?",
+            options: [
+            "Personalised recommendations and targeted ads",
+            "Cloud storage integration",
+            "Employee performance tracking",
+            "Automated payroll systems"
+            ],
+            answer: "Personalised recommendations and targeted ads",
+            explanation: "Customer data enables personalised services that increase satisfaction and sales."
+        },
+        {
+            question: "Which digital system helps organisations manage long-term customer relationships?",
+            options: [
+            "Loyalty programs and CRM systems",
+            "Automated manufacturing robots",
+            "Slack and Teams",
+            "Payroll management software"
+            ],
+            answer: "Loyalty programs and CRM systems",
+            explanation: "These tools improve customer retention through personalised communication."
+        },
+        {
+            question: "What is an example of using digital systems in Research, Design, and Development?",
+            options: [
+            "Slack messaging for teams",
+            "Digital prototyping and simulations",
+            "Payroll automation",
+            "GPS asset tracking"
+            ],
+            answer: "Digital prototyping and simulations",
+            explanation: "These allow innovative product and service development tailored to market needs."
+        },
+        {
+            question: "Which HR process uses e-learning platforms and databases?",
+            options: [
+            "Performance management",
+            "Training records",
+            "Payroll automation",
+            "Recruitment"
+            ],
+            answer: "Training records",
+            explanation: "E-learning systems manage staff training progress and certifications."
+        },
+        {
+            question: "What is an example of digital systems improving operations?",
+            options: [
+            "GPS tracking for assets",
+            "Slack and Teams for communication",
+            "Customer loyalty programs",
+            "E-commerce platforms"
+            ],
+            answer: "Slack and Teams for communication",
+            explanation: "Messaging and video platforms enhance internal communication across teams."
+        },
+        {
+            question: "Which digital tool supports remote working?",
+            options: [
+            "Cloud systems and video conferencing",
+            "Automated stock control",
+            "Digital prototyping tools",
+            "Loyalty card systems"
+            ],
+            answer: "Cloud systems and video conferencing",
+            explanation: "These allow staff to collaborate from any location."
+        },
+        {
+            question: "Which KPI could managers monitor using real-time dashboards?",
+            options: [
+            "Employee training progress",
+            "Sales revenue performance",
+            "Supplier relationships",
+            "Customer complaints"
+            ],
+            answer: "Sales revenue performance",
+            explanation: "Live dashboards show up-to-date revenue to aid quick decision-making."
+        },
+        {
+            question: "How do automated stock control systems benefit logistics?",
+            options: [
+            "They provide customer loyalty insights",
+            "They track inventory levels and send reorder alerts",
+            "They reduce employee training costs",
+            "They generate personalised advertisements"
+            ],
+            answer: "They track inventory levels and send reorder alerts",
+            explanation: "These systems reduce human error and keep inventory accurate."
+        },
+        {
+            question: "Which benefit comes from real-time accounting software?",
+            options: [
+            "Automated manufacturing",
+            "Accurate financial insights for faster decisions",
+            "Improved employee communication",
+            "Reduced shipping errors"
+            ],
+            answer: "Accurate financial insights for faster decisions",
+            explanation: "Digital finance tools provide up-to-date reporting for strategic choices."
+        },
+        {
+            question: "Why must digital systems provide appropriate functionality?",
+            options: [
+            "So tasks can be completed effectively",
+            "To reduce environmental impact",
+            "To prevent government regulation",
+            "To ensure profits are distributed"
+            ],
+            answer: "So tasks can be completed effectively",
+            explanation: "Systems need the right tools and functions to meet user needs."
+        },
+        {
+            question: "Which feature reduces user frustration when a system is slow?",
+            options: [
+            "High contrast mode",
+            "Compatibility with legacy systems",
+            "Progress bars and response time communication",
+            "Cloud storage integration"
+            ],
+            answer: "Progress bars and response time communication",
+            explanation: "Google Drive, for example, shows a progress bar when uploading."
+        },
+        {
+            question: "How does Amazon reduce complexity for customers?",
+            options: [
+            "Using automated payroll",
+            "Offering one-click purchasing",
+            "Tracking training records",
+            "Monitoring KPIs"
+            ],
+            answer: "Offering one-click purchasing",
+            explanation: "One-click ordering reduces unnecessary steps in the buying process."
+        },
+        {
+            question: "Which accessibility feature allows digital systems to serve more users?",
+            options: [
+            "Screen readers and captions",
+            "Payroll automation",
+            "GPS asset tracking",
+            "Loyalty program dashboards"
+            ],
+            answer: "Screen readers and captions",
+            explanation: "Accessibility tools make systems usable by people with disabilities."
+        },
+        {
+            question: "What is compatibility with legacy systems?",
+            options: [
+            "Working with old systems still in use",
+            "Adapting to customer preferences",
+            "Providing future upgrades automatically",
+            "Using analytics tools for feedback"
+            ],
+            answer: "Working with old systems still in use",
+            explanation: "New systems must integrate with older ones, like payroll pulling HR data."
+        },
+        {
+            question: "What is future proofing in digital systems?",
+            options: [
+            "Preventing government regulation",
+            "Allowing upgrades without disrupting users",
+            "Eliminating old databases completely",
+            "Storing employee records permanently"
+            ],
+            answer: "Allowing upgrades without disrupting users",
+            explanation: "Future-proof systems support updates with minimal downtime."
+        },
+        {
+            question: "Which example shows effective end-user support?",
+            options: [
+            "Apple providing chat support, tutorials, and forums",
+            "Amazon’s one-click ordering",
+            "Microsoft Word’s document formatting",
+            "PayPal’s payment integration"
+            ],
+            answer: "Apple providing chat support, tutorials, and forums",
+            explanation: "End-user support ensures users can solve problems easily."
+        },
+        {
+            question: "Why is ease of installation important for digital systems?",
+            options: [
+            "It ensures users can start using the system quickly",
+            "It prevents environmental impact",
+            "It guarantees compliance with government laws",
+            "It replaces training records"
+            ],
+            answer: "It ensures users can start using the system quickly",
+            explanation: "Easy installation reduces friction for new users and supports adoption."
+        }
+        ];
+
+
+        let currentQ = 0;
+        let score = 0;
+
+        const questionEl = document.getElementById("question");
+        const optionsEl = document.getElementById("options");
+        const feedbackEl = document.getElementById("feedback");
+        const resultEl = document.getElementById("result");
+        const nextBtn = document.getElementById("nextBtn");
+        const retryBtn = document.getElementById("retryBtn");
+
+        function showQuestion() {
+          const q = quizData[currentQ];
+          questionEl.textContent = q.question;
+          feedbackEl.textContent = "";
+          feedbackEl.className = "quiz-feedback";
+          nextBtn.style.display = "none";
+
+          optionsEl.innerHTML = "";
+          q.options.forEach(opt => {
+            const btn = document.createElement("button");
+            btn.textContent = opt;
+            btn.onclick = () => checkAnswer(opt, btn);
+            optionsEl.appendChild(btn);
+          });
+        }
+
+        function checkAnswer(answer, button) {
+          const q = quizData[currentQ];
+          const optionButtons = optionsEl.querySelectorAll("button");
+
+          // Disable all buttons after an answer
+          optionButtons.forEach(b => b.disabled = true);
+
+          if (answer === q.answer) {
+            score++;
+            button.classList.add("correct");
+            feedbackEl.textContent = "✅ Correct! " + q.explanation;
+            feedbackEl.classList.add("correct");
+          } else {
+            button.classList.add("wrong");
+            feedbackEl.textContent = `❌ Wrong. The correct answer is "${q.answer}". ${q.explanation}`;
+            feedbackEl.classList.add("wrong");
+
+            // Highlight correct answer
+            optionButtons.forEach(b => {
+              if (b.textContent === q.answer) {
+                b.classList.add("correct");
+              }
+            });
+          }
+
+          nextBtn.style.display = "block";
+        }
+
+        function nextQuestion() {
+          currentQ++;
+          if (currentQ < quizData.length) {
+            showQuestion();
+          } else {
+            showResult();
+          }
+        }
+
+        function showResult() {
+          questionEl.textContent = "";
+          optionsEl.innerHTML = "";
+          feedbackEl.textContent = "";
+          nextBtn.style.display = "none";
+          resultEl.textContent = `You scored ${score} out of ${quizData.length}! 🎉`;
+          retryBtn.style.display = "block";
+        }
+
+        nextBtn.addEventListener("click", nextQuestion);
+
+        retryBtn.addEventListener("click", () => {
+        currentQ = 0;
+        score = 0;
+        resultEl.textContent = "";
+        retryBtn.style.display = "none";
+        showQuestion();
+        });
+
+        nextBtn.addEventListener("click", nextQuestion);
+
+        // Start quiz
+        showQuestion();
+      </script>
     </main>
     
     <arrow-Nav>
